--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -187,3 +187,40 @@ html {
     color: var(--primary-color);
 
 }
+/* pagination */
+.pagination  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+
+    
+}
+.pagination-item--active .pagination-item__link {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+
+}
+.pagination-item--active .pagination-item__link:hover {
+    background-color: #ed5c3f;
+
+}
+.pagination-item {
+    margin: 0 12px;
+     
+}
+.pagination-item__link {
+    --height: 30px;
+    display: block;
+    text-decoration: none;
+    font-size: 1.9rem;
+    color: #939393;
+    min-width: 40px;
+    height: var(--height);
+    text-align: center;
+    line-height: var(--height);
+    border-radius: 2px;
+}
+.pagination-item__icon {
+
+}
