--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -20,7 +20,7 @@
     margin: 0 8px;
     position: relative;
     min-height: 26px;
-    z-index: 1;
+    z-index: 3;
 
 }
 .header__navbar-user {
@@ -35,7 +35,7 @@
     position: absolute;
     z-index: 1;
     padding-left: 0px;
-    top:100%;
+    top:calc(100% + 6px);
     right: 0;
     width: 160px;
     background-color: var(--white-color);
@@ -176,6 +176,8 @@
     border-radius: 2px;
     display: none;
     animation: fadeIn ease-in 0.3s;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -334,6 +336,9 @@
     line-height: 1.4rem;
     color: #756F6E;
     margin-top: 4px;
+}
+.select-input {
+    z-index: 1;
 }
 
 .header__notify-footer {
@@ -513,7 +518,7 @@
 .header__search {
     background-color: var(--white-color);
     height: 40px;
-    flex-grow: 1;
+    flex: 1;
     border-radius: 2px;
     display: flex;
     align-items: center;
@@ -543,6 +548,7 @@
     line-height: 1.4rem;
     border-radius: 10px;
     border: 2px solid #ee4d2d;
+ 
 }
 
 .header__cart-wrap:hover .header__cart-list {
@@ -566,6 +572,8 @@
     display: none;
     animation: fadeIn ease-in 0.2s;
     cursor: default;
+    z-index: 2 ;
+
 
 
 }
@@ -581,6 +589,8 @@
 .header__cart-list-item {
     padding-left: 0;
     list-style: none;
+    height: 56vh;
+    overflow-y:auto ;
 }
 
 .header__cart-item {
@@ -619,6 +629,16 @@
     font-weight: 500;
     color: var(--text-color);
     margin: 0;
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    flex: 1;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
+
 
 
 }
@@ -708,10 +728,18 @@
     margin-top: 8px;
     color: var(--text-color);
 }
-
+.header__search {
+    flex: 1;
+    height: 40px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    align-items: center;
+}
 .header__search-input-wrap {
     flex: 1;
     height: 100%;
+    position: relative;
 }
 
 .header__search-input {
@@ -720,7 +748,7 @@
     border: none;
     outline: none;
     font-size: 1.4rem;
-    color: var(--white-color);
+    color: var(--text-color);
     padding: 0 16px;
     border-radius: 2px;
 }
@@ -838,13 +866,15 @@
     display: inline-block;
 }
 
-.header__search-input:focus~ .header__search-history {
+.header__search-input:focus ~ .header__search-history {
     display: block;
+    background-color: var(--white-color);
     
 }
 
 /* Search history */
 .header__search-history {
+    position: absolute;
     top: calc(100% + 2px);
     left: 0;
     width: calc(100% - 16px);
@@ -854,6 +884,9 @@
     display: none;
     overflow: hidden;
     margin-top: 2px;
+    z-index: 2;
+    margin-top: 0px;
+ 
 }
 
 .header__search-history-heading {
@@ -899,23 +932,33 @@
 
 }
 .category__heading {
-    font-size: 1.7rem;
-    padding: 12px 16px;
+    font-size: 1.5rem;
+    padding: 16px 16px 0;
     color: var(--text-color);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     margin-top: 0;
+    text-transform: uppercase;  
 }
-.category__heading-icon {
-    font-size: 1.4rem;
-    margin-right: 4px;
-    position: relative;
-    top: -1px;
 
-}
 .category-list {
     padding: 0 0 8px 0 ;
     list-style: none;
-    margin-left: 9px;
+
+}
+.category-item {
+    position: relative;
+}
+.category-item:first-child::before {
+    display: none;
+
+}
+.category-item::before {
+    content: "";
+    border-top: 1px solid #e1e1e1;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    right: 20px;
+
 }
 
 .category-item--active .category-item__link {
@@ -935,17 +978,17 @@
 }
 .category-item__link {
     position: relative;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     color: var(--text-color);
     text-decoration: none;
-    padding: 6px 16px;
+    padding: 8px 20px;
     display: block;
     transition: right linear 0.1s ;
     right: 0;
 }
 .category-item__link:hover {
     color: var(--primary-color);
-    right: -4px;
+    right: -2px;
 
 }
 /* Home sort + filter */
@@ -1010,16 +1053,33 @@
     color: #ccc;
 }
 /* Product icon */
+.home-product {
+    margin-bottom: 10px;
+}
+
 .home-product-item {
     background-color: var(--white-color);
     margin-top: 10px;
     position: relative;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    transition: transform ease-in 0.1s;
+    will-change: transform;
+    display: block;
+    text-decoration: none;
+}
+.home-product-item:hover {
+    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
+    transform: translateY(-1px);
+
 }
 .home-product-item__img {
     padding-top: 100%;
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position: top center;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 .home-product-item__name {
     font-size: 1.4rem;
@@ -1100,9 +1160,11 @@ i.home-product-item__like-icon-fill {
     
 }
 .home-product-item__brand {
+    padding-left: 8px;
 
 }
 .home-product-item__origin-name {
+    padding-right: 8px;
 
 }
 .home-product-item__favourite {
@@ -1138,11 +1200,131 @@ i.home-product-item__like-icon-fill {
 
 }
 .home-product-item__sale-off {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    text-align: center;
+    height: 36px;
+    background-color: #ffd840f0;
+    border-top-right-radius: 2px;
+
+
+}
+.home-product-item__sale-off::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    border-width: 0 20px 4px;
+    border-style: solid;
+    border-color: transparent #ffd840f0 transparent #ffd840f0;
 
 }
 .home-product-item__sale-off-percent {
-
+    color: #ee4d2d;
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    top: 4px;
+    position: relative;
 }
 .home-product-item__sale-off-label {
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+    color: var(--white-color);
+    position: relative;
+    top: 2px;
+}
+.home-product__pagination {
+    margin-top: 48px;
+    margin-bottom: 32px;
+}
+/* Footer */
+.footer {
+    border-top: 4px solid var(--primary-color);
+    padding-top: 18px;
+    background-color: var(--white-color);
 
+}
+.footer__heading {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+
+}
+.footer-list {
+    padding-left:0 ;
+    list-style: none;
+
+}
+.footer-item__link {
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: #737373;
+    padding: 4px 0;
+    display: flex;
+    align-items: center;
+
+}
+.footer-item__link:hover {
+    color: var(--primary-color);
+}
+.footer-item__icon {
+    font-size: 1.7rem;
+    margin: -2px 8px 0 0;
+
+}
+.footer__download {
+    display: flex;
+    margin-left: 16px;
+
+}
+.footer__download-qr {
+    width: 80px;
+    height: 80px;
+    border: 1px solid var(--border-color);
+}
+.footer__download-app-img {
+    height: 18px;
+    margin-left: 12px;
+    
+}
+.footer__download-apps {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer__download-app-link {
+    text-decoration: none;
+    color: transparent;
+}
+.footer__bottom {
+    background-color: #f5f5f5;
+    padding: 10px 0;
+    margin-top: 36px;
+}
+.footer__text {
+    margin: 20px;
+    text-align: center;
+    font-size: 1.2rem;
+    margin-bottom: 0;
+    color: #737373;
+
+}
+/* Policy */
+.policy {
+    display: flex;
+    margin: 0 50px;
+
+}
+.policy-link {
+    margin: 0 50px;
+    font-size: 1.2rem;
+    color: var(--text-color);
+    text-transform: uppercase;
+
+}
+.policy-link:hover {
+    cursor: pointer;
 }
